Refactor Frequency class: make it generic, use Java 8 streams where possible. Add LongFrequency which has same behavior as old Frequency class wrt integer/long values.